--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -4,9 +4,17 @@
         <servlet-name>LogoutServlet</servlet-name>
         <servlet-class>Connectie.LogoutServlet</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>WijzigServlet</servlet-name>
+        <servlet-class>Connectie.WijzigServlet</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>LogoutServlet</servlet-name>
         <url-pattern>/LogoutServlet</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>WijzigServlet</servlet-name>
+        <url-pattern>/WijzigServlet</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
