--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -8,6 +8,10 @@
         <servlet-name>WijzigServlet</servlet-name>
         <servlet-class>Connectie.WijzigServlet</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>Patienten</servlet-name>
+        <servlet-class>Connectie.Patienten</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>LogoutServlet</servlet-name>
         <url-pattern>/LogoutServlet</url-pattern>
@@ -15,6 +19,10 @@
     <servlet-mapping>
         <servlet-name>WijzigServlet</servlet-name>
         <url-pattern>/WijzigServlet</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>Patienten</servlet-name>
+        <url-pattern>/Patienten</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
