--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -12,6 +12,10 @@
         <servlet-name>Patienten</servlet-name>
         <servlet-class>Connectie.Patienten</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>PatientInfoServlet</servlet-name>
+        <servlet-class>Connectie.PatientInfoServlet</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>LogoutServlet</servlet-name>
         <url-pattern>/LogoutServlet</url-pattern>
@@ -23,6 +27,10 @@
     <servlet-mapping>
         <servlet-name>Patienten</servlet-name>
         <url-pattern>/Patienten</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>PatientInfoServlet</servlet-name>
+        <url-pattern>/PatientInfoServlet</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
